--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
   build:
     - cmake
     - {{ compiler('c') }}
-    - nasm
+    - nasm  # [x86_64]
     - ninja
     - meson
   host:
