--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,9 +1,10 @@
-{% set name = "libavif" %}
-{% set version = "0.11.1" %}
 # NOTE: Humans must also update the library version in so_version
+{% set name = "libavif" %}
+{% set version = "1.1.1" %}
 # Look in the libavif top level CMakeLists.txt for the updated library
 # version (not the same as the project version) to update parameters for existence checks
-{% set so_version = "15.0.1" %}
+# The SO name changes every version https://github.com/AOMediaCodec/libavif/issues/799
+{% set so_version = "16." ~ version.split('.')[1] ~ "." ~ version.split('.')[2] %}
 {% set so_major_version = so_version.split('.')[0] %}
 
 package:
@@ -11,16 +12,13 @@ package:
   version: {{ version }}
 
 source:
-  url: https://github.com/AOMediaCodec/libavif/archive/refs/tags/v{{ version }}.tar.gz
-  sha256: 0eb49965562a0e5e5de58389650d434cff32af84c34185b6c9b7b2fccae06d4e
+  url: https://github.com/AOMediaCodec/{{ name }}/archive/refs/tags/v{{ version }}.tar.gz
+  sha256: 914662e16245e062ed73f90112fbb4548241300843a7772d8d441bb6859de45b
 
 build:
-  run_exports:
-    # TODO: Relax constraint when libavif >=1.0.0
-    # The SO name changes every version
-    # https://github.com/AOMediaCodec/libavif/issues/799
-    - {{ pin_subpackage('libavif', min_pin='x.x.x', max_pin='x.x.x') }}
   number: 0
+  run_exports:
+    - {{ pin_subpackage('libavif', max_pin='x') }}
 
 requirements:
   build:
@@ -29,12 +27,13 @@ requirements:
     - nasm  # [x86_64]
     - ninja
   host:
-    - aom 3.6.0
+    - aom 3.6
     - dav1d 1.2.1
 
 test:
   commands:
     - test -f ${PREFIX}/include/avif/avif.h                         # [unix]
+    - test -f ${PREFIX}/include/avif/avif_cxx.h                         # [unix]
     - if not exist %PREFIX%\\Library\\include\\avif\\avif.h exit 1  # [win]
     - test -f ${PREFIX}/lib/libavif${SHLIB_EXT}                   # [unix]
     - test -f ${PREFIX}/lib/libavif.so.{{ so_major_version }}     # [linux]
